<resources>
    <string name="app_name" fontFamily="@font/norwester">CarRental</string>
    <string name="carrental" fontFamily="@font/norwester">CarRental</string>
    <string name="log_in">Log in</string>
    <string name="catalog">Catalog</string>
    <string name="logo">Logo</string>
    <string name="roll">ROLL</string>
    <string name="faq">FAQ</string>
    <string name="faqtext">-Hello, we are CarRent </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">login</string>
    <string name="password">password</string>
    <string name="register">REGISTER</string>
    <string name="i_m_not_a_robot">I\'m not a robot</string>
    <string name="add">add</string>
    <string name="enter_your_favorite_carbrand">Enter your favorite carbrand</string>
    <string name="repassword">repassword</string>
    <string name="username">username</string>
    <string name="password_again">password again</string>

</resources>