<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="148dp"
        android:layout_height="65dp"
        android:layout_marginStart="138dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="138dp"
        android:fontFamily="@font/qanelas"
        android:text="@string/log_in"
        android:textColor="#C8C8C8"
        android:textSize="48sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="106dp"
        android:layout_marginTop="66dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="26dp"
        android:ems="10"
        android:fontFamily="@font/qanelas"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:shadowColor="#9F9F9F"
        android:textAlignment="center"
        android:textColor="#A5A5A5"
        android:textColorHint="#a5a5a5"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="23dp"
        android:ems="10"
        android:fontFamily="@font/qanelas"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="#A5a5a5"
        android:textColorHint="#a5a5a5"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName"
        android:autofillHints="" />

    <Button
        android:id="@+id/button5"
        android:layout_width="131dp"
        android:layout_height="65dp"
        android:layout_marginStart="161dp"
        android:layout_marginEnd="162dp"
        android:layout_marginBottom="168dp"
        android:fontFamily="@font/qanelas"
        android:text="@string/log_in"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox2"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="195dp"
        android:layout_marginBottom="101dp"
        android:fontFamily="@font/qanelas"
        android:text="@string/i_m_not_a_robot"
        android:textColor="#a5a5a5"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2" />

    <Button
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="152dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="58dp"
        android:fontFamily="@font/qanelas"
        android:text="@string/register"
        app:backgroundTint="#222222"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</androidx.constraintlayout.widget.ConstraintLayout>