<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#222222"
    tools:context=".HomeFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="55dp"
        android:layout_marginTop="37dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="23dp"
        android:fontFamily="@font/qanelas"
        android:text="@string/carrental"
        android:textAlignment="center"
        android:textColor="#C6C6C6"
        android:textSize="50sp"
        android:typeface="serif"
        app:layout_constraintBottom_toTopOf="@+id/imageView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.506"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_FAQ"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/qanelas"
        android:text="@string/faq"
        android:textAlignment="center"
        android:textColor="#C6C6C6"
        android:textSize="18sp"
        android:typeface="sans"
        android:visibility="visible"
        app:icon="@drawable/ic_baseline_help_24"
        app:layout_constraintBottom_toTopOf="@+id/button_Discount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <Button
        android:id="@+id/button_Discount"
        android:layout_width="182dp"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="112dp"
        android:layout_marginBottom="66dp"
        android:fontFamily="@font/qanelas"
        android:text="discount"
        android:textAlignment="center"
        android:textColor="#C6C6C6"
        android:textSize="18sp"
        android:typeface="sans"
        android:visibility="visible"
        app:icon="@drawable/ic_baseline_discount_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.692"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="394dp"
        android:layout_height="366dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="9dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/random_2" />

</androidx.constraintlayout.widget.ConstraintLayout>


